resolves header with arrow misalignment with tr--c

--- a/source/scss/blocks/_table-row-headers.scss
+++ b/source/scss/blocks/_table-row-headers.scss
@@ -4,33 +4,35 @@ Table Row Headers With Arrow
 Markup:
 <div class="cui-flex-table__th cui-flex-table__th--c">
   <div class="cui-flex-table__avatar-col">
-    <span>name
+    <span class="cui-flex-table__th-container">name
       <svg class="cui-flex-table__th-arrow" viewBox="0 0 216 146">
         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="node_modules/cui-icons/dist/font-awesome/font-awesome-out.svg#arrowhead5" class="svg"></use>
       </svg>
     </span>
   </div>
-  <div class="cui-flex-table__left"></div>
-  <div class="cui-flex-table__middle">
-    <span>userid
-      <svg class="cui-flex-table__th-arrow" viewBox="0 0 216 146">
-        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="node_modules/cui-icons/dist/font-awesome/font-awesome-out.svg#arrowhead5" class="svg"></use>
-      </svg>
-    </span>
-  </div>
-  <div class="cui-flex-table__middle">
-    <span>registered
-      <svg class="cui-flex-table__th-arrow" viewBox="0 0 216 146">
-        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="node_modules/cui-icons/dist/font-awesome/font-awesome-out.svg#arrowhead5" class="svg"></use>
-      </svg>
-    </span>
-  </div>
-  <div class="cui-flex-table__right">
-    <span>status
-      <svg class="cui-flex-table__th-arrow" viewBox="0 0 216 146">
-        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="node_modules/cui-icons/dist/font-awesome/font-awesome-out.svg#arrowhead5" class="svg"></use>
-      </svg>
-    </span>
+  <div class="cui-flex-table__mobile-stack">
+    <div class="cui-flex-table__left"></div>
+    <div class="cui-flex-table__middle">
+      <span class="cui-flex-table__th-container">userid
+        <svg class="cui-flex-table__th-arrow" viewBox="0 0 216 146">
+          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="node_modules/cui-icons/dist/font-awesome/font-awesome-out.svg#arrowhead5" class="svg"></use>
+        </svg>
+      </span>
+    </div>
+    <div class="cui-flex-table__middle">
+      <span class="cui-flex-table__th-container">registered
+        <svg class="cui-flex-table__th-arrow" viewBox="0 0 216 146">
+          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="node_modules/cui-icons/dist/font-awesome/font-awesome-out.svg#arrowhead5" class="svg"></use>
+        </svg>
+      </span>
+    </div>
+    <div class="cui-flex-table__right">
+      <span class="cui-flex-table__th-container">status
+        <svg class="cui-flex-table__th-arrow" viewBox="0 0 216 146">
+          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="node_modules/cui-icons/dist/font-awesome/font-awesome-out.svg#arrowhead5" class="svg"></use>
+        </svg>
+      </span>
+    </div>
   </div>
 </div>
 
@@ -43,7 +45,7 @@ Styleguide Tables.Flex-Table-Headers
   .cui-flex-table__right {
     cursor: pointer;
 
-    & span {
+    & .cui-flex-table__th-container {
       position: relative; 
     } 
     
